# PXD-AssetLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.bat  setup.sh
includes/: assimp_importer.hpp  base_importer.hpp  debug.hpp  fastgltf_importer.hpp  model.hpp  scene.hpp  types.hpp
sources/: assimp_importer.cpp  base_importer.cpp  debug.cpp  fastgltf_importer.cpp  model.cpp  scene.cpp  types.cpp
